--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -51,6 +51,7 @@
     <plugin name="SplashScreen" value="org.apache.cordova.SplashScreen"/>
     <plugin name="Echo" value="org.apache.cordova.Echo" />
     <plugin name="Globalization" value="org.apache.cordova.Globalization"/>
+    <plugin name="Contacts" value="org.apache.cordova.ContactManager" />    
 </plugins>
 </cordova>
 
